# figlet-generator

./: FONTS.txt  README.md  figlet.py  pyproject.toml  setup.py
.github/workflows/: pyproject.toml  python-publish.toml  python-publish.yml  setup.py
