[project]
name = "py-figlet-generator0"
version = "0.0.2"
authors = [
  { name="seandadonntech", email="lilcryptotech@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seandadonntech/figlet-generator"
"Bug Tracker" = "https://github.com/seandadonntech/figlet-generator/issues"
